Slowness when using the Image Editor's Vectorscope opacity slider #120789

Closed
opened 2024-04-18 20:02:22 +02:00 by Joel Velarde Cucho · 10 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: Radeon RX 560 Series ATI Technologies Inc. 4.6.0 Core Profile Context 22.20.27.09.230330

Blender Version
Broken: version: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash: e1743a0317bc
Worked: 4.0

Caused by 567455124d

Short description of error
Changing the Vectorscope opacity slider shows lag, except when changing the Display Device to "Standard" in the Color Management panel. It only happens with the Color Management panel active, when set to Raw and using the Convert Colorspace node in the compositor there is no lag in vectorscope using even custom color spaces.

Exact steps for others to reproduce the error
Open the attached .blend, move the Vectorscope slider. Now change the view transform from AgX to Raw and activate the Convert Colorspace node, move the Vectorscope slider again and you will see that now there is no lag.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: Radeon RX 560 Series ATI Technologies Inc. 4.6.0 Core Profile Context 22.20.27.09.230330 **Blender Version** Broken: version: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash: `e1743a0317bc` Worked: 4.0 Caused by 567455124d **Short description of error** Changing the Vectorscope opacity slider shows lag, except when changing the Display Device to "Standard" in the Color Management panel. It only happens with the Color Management panel active, when set to Raw and using the Convert Colorspace node in the compositor there is no lag in vectorscope using even custom color spaces. **Exact steps for others to reproduce the error** Open the attached .blend, move the Vectorscope slider. Now change the view transform from AgX to Raw and activate the Convert Colorspace node, move the Vectorscope slider again and you will see that now there is no lag.
Joel Velarde Cucho added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2024-04-18 20:02:23 +02:00

The slowness is much more noticeable when using custom OCIO configs and it seems that the sample panel slider also has the same behavior

The slowness is much more noticeable when using custom OCIO configs and it seems that the sample panel slider also has the same behavior
Joel Velarde Cucho changed title from Slowness when using the image editor's Vectorscope opacity slider to Slowness when using the Image Editor's Vectorscope opacity slider 2024-04-18 20:06:19 +02:00

Not able to confirm any issues.

Not able to confirm any issues.
Iliya Katushenock added the
Interest
Compositing
Interest
VFX & Video
labels 2024-04-18 20:20:21 +02:00
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2024-04-18 20:20:34 +02:00
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2024-04-18 20:20:54 +02:00

Sorry, I accidentally closed the issue. I attach here a video of what it looks like when I use a custom config (but it uses the same AgX included in blender, just with a different name).

Sorry, I accidentally closed the issue. I attach here a video of what it looks like when I use a custom config (but it uses the same AgX included in blender, just with a different name).
Member

I believe this is very much just the speed of color transformation processing being slow. I couldn't reproduce the slowness in any of the built-in color transformations either.

I believe this is very much just the speed of color transformation processing being slow. I couldn't reproduce the slowness in any of the built-in color transformations either.
Member

Hi, unable to confirm either. Could you confirm this issue in 4.0 so we know whether this is caused by recent improvements in Vectorscope.
Can you try with AgX that is shipped with blender by default?

Hi, unable to confirm either. Could you confirm this issue in 4.0 so we know whether this is caused by recent improvements in Vectorscope. Can you try with AgX that is shipped with blender by default?
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-04-19 05:56:50 +02:00

Hi, unable to confirm either. Could you confirm this issue in 4.0 so we know whether this is caused by recent improvements in Vectorscope.
Can you try with AgX that is shipped with blender by default?

I think that's why. I just tested in 4.0 and 4.1.1, in the video I do the same steps:

  • I move the vectorscope slider and also the sample panel slider
  • I set the color management panel to raw and use the convert colorspace node in the compositor, I test the sliders again.

In the end I also tested if using a look affected the performance, it did in blender 4.1. The fact that I add a look and it slows down also confuses me because if I were to use the look in the compositor (using the hack of adding the look to the view transform by editing the config file) it would not affect performance and it would behave the same as the video when I'm in the compositor. What makes the node operate faster than the panel? and what does that have to do with the performance of the vectorscope?.

> Hi, unable to confirm either. Could you confirm this issue in 4.0 so we know whether this is caused by recent improvements in Vectorscope. > Can you try with AgX that is shipped with blender by default? I think that's why. I just tested in 4.0 and 4.1.1, in the video I do the same steps: - I move the vectorscope slider and also the sample panel slider - I set the color management panel to raw and use the convert colorspace node in the compositor, I test the sliders again. In the end I also tested if using a look affected the performance, it did in blender 4.1. The fact that I add a look and it slows down also confuses me because if I were to use the look in the compositor (using the hack of adding the look to the view transform by editing the config file) it would not affect performance and it would behave the same as the video when I'm in the compositor. What makes the node operate faster than the panel? and what does that have to do with the performance of the vectorscope?.
3.8 MiB
3.8 MiB

I was doing one more test and I see that the larger the image resolution, the slower these sliders are (maybe it is due to the vectorscope drawing calculation?). Even so in 4.0 it is faster than 4.1. That's using the color management panel, if I use the compositor the difference is greater. I also recorded videos of this.

By the way, how to show videos in a message here, it only says upload files.

I was doing one more test and I see that the larger the image resolution, the slower these sliders are (maybe it is due to the vectorscope drawing calculation?). Even so in 4.0 it is faster than 4.1. That's using the color management panel, if I use the compositor the difference is greater. I also recorded videos of this. By the way, how to show videos in a message here, it only says upload files.
Pratik Borhade added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2024-04-19 10:35:40 +02:00
Member

I have scaled the image up and I think I can repro (see attached file).
To be fair, we'd have to compare the Luma mode in 4.1 to 4.0 (I think 4.0 didnt have the RGB mode?), but still, even that is slower in 4.1...

Caused by 567455124d

CC @JonasDichelle
CC @aras_p
CC @JonasDichelle

I have scaled the image up and I think I can repro (see attached file). To be fair, we'd have to compare the Luma mode in 4.1 to 4.0 (I think 4.0 didnt have the RGB mode?), but still, even that is slower in 4.1... Caused by 567455124d6161cea3b157c1628ceb20c128bec3 CC @JonasDichelle CC @aras_p CC @JonasDichelle
Member

Really not sure what to do with priority here. It is a regression though, so will raise for the time being.
(since this is also tied to an overall improvement, I think some sort of performance drop can be taken, just not sure how much... or if there is a way to work around it somehow)

Really not sure what to do with priority here. It is a regression though, so will raise for the time being. (since this is also tied to an overall improvement, I think some sort of performance drop can be taken, just not sure how much... or if there is a way to work around it somehow)
Aras Pranckevicius self-assigned this 2024-04-19 19:26:05 +02:00

Yeah even with the scope look improvement and additional modes, if it causes a non-trivial performance hit that's not ideal. I can take a look at what is going on, and try to fix it.

Yeah even with the scope look improvement and additional modes, if it causes a non-trivial performance hit that's not ideal. I can take a look at what is going on, and try to fix it.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-20 17:10:24 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120789
No description provided.